# spin-api

./: .gitignore  Cargo.toml  migration.sql  readme.md  spin.toml
src/: api.rs  db.rs  lib.rs  models.rs  request.rs
src/commands/: mod.rs  todo_commands.rs
src/handlers/: llm.rs  mod.rs  open_api.rs  swagger.rs  todos.rs
src/queries/: mod.rs  todo_queries.rs
